--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
   <header>
     <!-- logo -->
     <div class="logo">
-      <img src="images/logo.svg" alt="Logo">
+      <a href="/">
+        <img src="images/logo.svg" alt="Logo">
+      </a>
+      
     </div>
 
     <!-- hamburger menu -->
