Nav links spacing fixed

--- a/index.html
+++ b/index.html
@@ -46,13 +46,16 @@
       </div>
 
       <!-- CTA Button -->
-      <button type="button" class="header__cta hide-for-mobile">Request Invite</button>
+      <button type="button" 
+        class="header__cta hide-for-mobile">
+        Request Invite
+      </button>
     </nav>
   </header>
 
 
 
-  <h3>Next generation digital banking</h3>
+  <h1>Next generation digital banking</h1>
 
   <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
   for spending, saving, budgeting, investing, and much more.</p>
