--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </a>
 
       <!-- hamburger menu -->
-      <a href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
