Overlay and align nav vertically

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
 
   <header class="header">
-    <nav class="flex flex-jc-sb">
+    <div class="overlay"></div>
+    <nav class="flex flex-jc-sb flex-ai-c">
       <!-- logo -->
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="Logo">
