White Mobile Menu done

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
   <header class="header">
     <div class="overlay"></div>
-    <nav class="flex flex-jc-sb flex-ai-c">
+    <nav class="container flex flex-jc-sb flex-ai-c">
       <!-- logo -->
       <a href="/" class="header__logo">
         <img src="images/logo.svg" alt="Logo">
       </a>
 
       <!-- hamburger menu -->
-      <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -52,15 +52,27 @@
         Request Invite
       </button>
     </nav>
+
+    <!-- mobile menu -->
+    <div class="header__mobile-menu hide-for-desktop">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      <a href="#">Blog</a>
+      <a href="#">Careers</a>
+    </div>
+
   </header>
 
 
+  <section class="container">
+    <h1>Next generation digital banking</h1>
 
-  <h1>Next generation digital banking</h1>
-
-  <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.</p>
-  <hr />
+    <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+    for spending, saving, budgeting, investing, and much more.</p>
+    <hr />
+    <h6>© Easybank. All Rights Reserved</h6>
+</section>
 <!--
   
 
@@ -110,7 +122,7 @@
 -->
 
 
-  © Easybank. All Rights Reserved
+  
   
   <div class="attribution">
     Challenge by 
