Mobile menu animated fading in/out

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 
   <header class="header">
-    <div class="overlay"></div>
+    <div class="overlay has-fade"></div>
     <nav class="container flex flex-jc-sb flex-ai-c">
       <!-- logo -->
       <a href="/" class="header__logo">
@@ -54,7 +54,7 @@
     </nav>
 
     <!-- mobile menu -->
-    <div class="header__mobile-menu hide-for-desktop">
+    <div class="header__mobile-menu hide-for-desktop has-fade">
       <a href="#">Home</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
