--- a/index.html
+++ b/index.html
@@ -64,12 +64,33 @@
 
   </header>
 
+  <!-- Hero -->
+  <section class="hero container">
 
-  <section class="container">
-    <h1>Next generation digital banking</h1>
+    <!-- hero image -->
+    <div class="hero__image"></div>
 
-    <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
-    for spending, saving, budgeting, investing, and much more.</p>
+    <!-- hero text -->
+    <div class="hero__text">
+
+      <h1>Next generation digital banking</h1>
+      <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
+        for spending, saving, budgeting, investing, and much more.</p>
+
+      <button type="button" class="hero__cta">
+        Request Invite
+      </button>
+
+      <h2>Why choose Easybank?</h2>
+      <p>We leverage Open Banking to turn your bank account into your financial hub. 
+        Control your finances like never before.</p>
+
+    </div>
+
+  </section>
+
+  <!-- Bottom -->
+  <section class="bottom container">
     <hr />
     <h6>© Easybank. All Rights Reserved</h6>
 </section>
