--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <p>Take your financial life online. Your Easybank account will be a one-stop-shop 
         for spending, saving, budgeting, investing, and much more.</p>
 
-      <button type="button" class="hero__cta">
+      <button type="button" class="button hero__cta">
         Request Invite
       </button>
 
